--- a/ShuflleCard_Homework/ShuflleCard_Homework.vcxproj
+++ b/ShuflleCard_Homework/ShuflleCard_Homework.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="DeckOfCards.h" />
     <ClInclude Include="PlayingCard.h" />
+    <ClInclude Include="Task.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
